--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://HARIDARSHAN:Svharidarshan41@cluster0.iiaqp2a.mongodb.net/
+MONGO_URL=mongodb+srv://HARIDARSHAN:pass@cluster0.iiaqp2a.mongodb.net/
